# promptflow_playground

./: basic_flow.py  connection.yaml  create_connections.py  data.jsonl  fitz_example.py  flow.dag.yaml  hello.py  keyring.json  my_flow.yaml  pyproject.toml  radai_api_call.py  run_flow.py
document_reader/: Aaliyah_of_the_Azure_Sands.docx  data.jsonl  document_class_check.py  docx_reader.py  flow.dag.yaml  generate_document_content.py  generate_response.py  hello.jinja2  hello.py  pdf_reader.py  summarize_document.py  summary_prompt.jinja2  system_prompt.jinja2
